infra/k8s/ollama-deyployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-ai-deskhelp # Deployment Name
  labels:
    app: ollama-ai-deskhelp
    part: ollama

spec:
  replicas: 1 # Nur ein Ollama Pod

  selector:
    matchLabels:
      app: ollama-ai-deskhelp
      part: ollama

  template:
    metadata:
      labels:
        app: ollama-ai-deskhelp
        part: ollama

    spec:
      containers:
        - name: ollama-ai-deskhelp # Container Name
          image: ollama/ollama:latest # Ollama Image

          ports:
            - containerPort: 11434 # Ollama Port

          volumeMounts:
            - name: ollama-storage
              mountPath: /root/.ollama # Modelle speichern

          resources:
            requests:
              cpu: "1000m" #mindest ein CPU
              memory: "2Gi" #2GB RAM
            limits:
              cpu: "2000m" # maximum 2 CPU
              memory: "3Gi" #maximimu 3 RAM

      volumes:
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc # Nutzt PVC

---

apiVersion: v1
kind: Service
metadata:
  name: ollama-service # Service Name
  labels:
    app: ollama-ai-deskhelp
    part: ollama

spec:
  type: ClusterIP # Nur intern im Cluster

  selector:
    app: ollama-ai-deskhelp
    part: ollama

  ports:
    - name: http
      port: 11434 # Service Port
      targetPort: 11434 # Container Port
