infra/k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-deskhelp-ingress

spec:
  rules:
    - host: ai-deskhelp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8081

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8082

          - path: /rag
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8082

          - path: /swagger-ui/index.html
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8082
